finished: navbar and search

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 $background-color: #222222;
 $light-gray: #6c6c6c;
+$purple-1: #4b3e6a;
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
@@ -46,7 +47,7 @@ body {
 			input {
 				padding: 15px;
 				border: none;
-				border-bottom: 1px solid #4b3e6a;
+				border-bottom: 1px solid $purple-1;
 				min-width: 250px;
 				&::placeholder {
 					color: rgb(170, 170, 170);
@@ -111,8 +112,19 @@ body {
 				justify-content: space-between;
 				color: azure;
 
-				.logo {
-					font-weight: bold;
+				.logoContainer {
+					display: flex;
+					align-items: center;
+					gap: 10px;
+					
+					img {
+						width: 32px;
+						height: 32px;
+					}
+
+					.logo {
+						font-weight: bold;
+					}
 				}
 
 				.user {
@@ -138,9 +150,48 @@ body {
 					}
 				}
 			}
+			.searchBar {
+				border-bottom: 1px solid $purple-1;
+
+				.searchForm {
+					padding: 10px;
+
+					input {
+						background-color: transparent;
+						color: white;
+						outline: none;
+						border: none;
+						padding: 10px;
+						font-size: 14px;
+
+						&::placeholder {
+							color: aliceblue;
+						}
+					}
+				}
+			}
+
+			.userChat {
+				padding: 10px;
+				display: flex;
+				align-items: center;
+				gap: 10px;
+				color: white;
+				cursor: pointer;
+				&:hover {
+					background-color: #9c9c9c;
+				}
+				img {
+					height: 50px;
+					width: 50px;
+					border-radius: 50%;
+					object-fit: cover;
+					background-color: azure;
+				}
+			}
 		}
 		.chat {
-			flex: 2
+			flex: 2;
 		}
 	}
 }
