--- a/src/style.scss
+++ b/src/style.scss
@@ -12,6 +12,36 @@ body {
 	margin: 0;
 }
 
+.startContainer {
+	background-color: #0f0f0f;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	img {
+		max-width: 850px;
+		max-height: 650px;
+	}
+
+	button {
+		min-width: 200px;
+		min-height: 50px;
+		border: none;
+		border-radius: 3px;
+		background-color: $light-gray;
+		color: white;
+		font-size: 18px;
+		font-weight: bold;
+		padding: 5px;
+		cursor: pointer;
+
+		&:hover {
+			background-color: #3d3d3d;
+		}
+	}
+}
+
 .formContainer {
 	background-color: $background-color;
 	height: 100vh;
@@ -116,7 +146,7 @@ body {
 					display: flex;
 					align-items: center;
 					gap: 10px;
-					
+
 					img {
 						width: 32px;
 						height: 32px;
@@ -182,16 +212,137 @@ body {
 					background-color: #9c9c9c;
 				}
 				img {
-					height: 50px;
-					width: 50px;
+					height: 70px;
+					width: 70px;
 					border-radius: 50%;
 					object-fit: cover;
 					background-color: azure;
+				}
+
+				.userChatInfo {
+					span {
+						font-size: 18px;
+						font-weight: 500;
+					}
+					p {
+						font-size: 14px;
+						color: lightgrey;
+					}
 				}
 			}
 		}
 		.chat {
 			flex: 2;
+
+			.chatInfo {
+				height: 50px;
+				padding: 10px;
+				background-color: #505050;
+				display: flex;
+				align-items: center;
+
+				span {
+					font-size: 18px;
+					font-weight: 500;
+					color: lightgrey;
+				}
+			}
+
+			.messages {
+				background-color: #eeeeee;
+				padding: 10px;
+				height: calc(100% - 160px);
+				overflow-y: scroll;
+
+				.message {
+					display: flex;
+					gap: 20px;
+					margin-bottom: 20px;
+					
+					.messageInfo {
+						display: flex;
+						flex-direction: column;
+						color: grey;
+						font-weight: 300;
+						font-size: 12px;
+						align-items: center;
+
+						img {
+							height: 60px;
+							width: 60px;
+							border-radius: 50%;
+							object-fit: cover;
+							background-color: azure;
+						}
+					}
+
+					.messageContent {
+						max-width: 80%;
+						display: flex;
+						flex-direction: column;
+						gap: 10px;
+
+						p {
+							background-color: white;
+							padding: 10px 20px;
+							border-radius: 0px 10px 10px 10px;
+							max-width: max-content;
+						}
+						img {
+							height: 200px;
+							width: 200px;
+							object-fit: cover;
+							background-color: azure;
+						}
+					}
+					&.owner {
+						flex-direction: row-reverse;
+
+						.messageContent {
+							align-items: flex-end;
+							p {
+								background-color: rgb(75, 221, 124);
+								border-radius: 10px 0px 10px 10px;
+							}
+						}
+					}
+				}
+			}
+
+			.input {
+				background-color: #60e867;
+				height: 50px;
+				padding: 10px;
+				display: flex;
+				gap: 2%;
+				align-items: center;
+
+				input {
+					width: 85%;
+					min-height: 30px;
+					border: none;
+					border-radius: 5px;
+					padding: 5px 10px;
+					outline: none;
+					font-size: 18px;
+					color: #222222;
+					&::placeholder {
+						color: rgb(170, 170, 170);
+					}
+				}
+
+				.send {
+					display: flex;
+					gap: 10px;
+					align-items: center;
+				}
+				label {
+					img {
+						width: 32px;
+						cursor: pointer;
+					}
+				}
+			}
 		}
 	}
 }
