--- a/src/style.scss
+++ b/src/style.scss
@@ -117,7 +117,16 @@ body {
 			font-size: 14px;
 			margin-top: 10px;
 		}
+		a {
+			color: blue;
+		}
 	}
+}
+footer {
+	color: white;
+	position: absolute;
+	bottom: 0;
+	padding: 10px;
 }
 
 .homePage {
@@ -127,13 +136,6 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-
-	footer {
-		color: white;
-		position: absolute;
-		bottom: 0;
-		padding: 10px;
-	}
 
 	.homePageContainer {
 		border: 1px solid white;
@@ -272,7 +274,7 @@ body {
 					display: flex;
 					gap: 20px;
 					margin-bottom: 20px;
-					
+
 					.messageInfo {
 						display: flex;
 						flex-direction: column;
